--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <!-- <maven.compiler.source>5.0</maven.compiler.source>
+    <maven.compiler.target>5.0</maven.compiler.target> -->
+    <maven.compiler.release>18</maven.compiler.release>
   </properties>
 
   <dependencies>
@@ -43,6 +44,9 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          <configuration>
+            <release>8</release>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
